--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,9 @@
+body {
+    background-image: url(imagens/bg.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
 .mosca1{
     width: 50px;
     height: 50px;    
@@ -10,4 +16,33 @@
     width: 90px;
     height: 90px;
 
+}
+
+.ladoA {
+	transform: scaleX(1);
+}
+
+.ladoB {
+	transform: scaleX(-1);
+}
+
+.painel {
+    position: absolute;
+    width: 190px;
+    padding: 10px;
+    left: 0px;
+    bottom: 0px;
+    border-top: solid 1px #fff;
+    background-color: #fff;
+    opacity: 0.7
+}
+
+.vidas{
+    float: left;
+}
+
+.cronometro{
+    float:left;
+    font-size: 20px;
+    font-weight: bold;
 }
